--- a/tp12/configs/config_plan3.yaml
+++ b/tp12/configs/config_plan3.yaml
@@ -1,5 +1,5 @@
 env: gridworld-v0
-map: gridworldPlans&Goals/plan2.txt
+map: gridworldPlans&Goals/plan3.txt
 rewards:
   0: -0.001
   3: 1
@@ -31,3 +31,9 @@ replay: true
 prior: false
 learning_offset: 1000
 device: "cuda:0"
+
+# IGS parameters
+beta: 0.9
+alpha: 3
+goal_buffer_size: 10
+goalFreq: 10
